--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -13,6 +13,7 @@
     "@react-spring/web": "^9.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-spring": "^9.7.2",
     "theme-change": "^2.5.0",
     "tree-kill": "^1.2.2",
     "vite-tsconfig-paths": "^4.2.0"
